gcc/testsuite/gcc.dg/noncompile/921102-1.c
int x[]={[0.3 ... 4.6]9}; /* { dg-error "nonconstant array|near init" } */
